Cqrs splited from Common + AspNetCore middleware GraphQL WIP BreezeConfig refactored

--- a/CoreSharp.GraphQL/CoreSharp.GraphQL.csproj
+++ b/CoreSharp.GraphQL/CoreSharp.GraphQL.csproj
@@ -21,6 +21,7 @@
     
     <ItemGroup>
         <ProjectReference Include="..\CoreSharp.Common\CoreSharp.Common.csproj" />
+        <ProjectReference Include="..\CoreSharp.Cqrs\CoreSharp.Cqrs.csproj" />
         <ProjectReference Include="..\CoreSharp.DataAccess\CoreSharp.DataAccess.csproj" />
     </ItemGroup>
 
