--- a/CoreSharp.Common/CoreSharp.Common.csproj
+++ b/CoreSharp.Common/CoreSharp.Common.csproj
@@ -5,7 +5,7 @@
         <PackageId>CoreSharp.Common</PackageId>
         <PackageVersion>0.1.0</PackageVersion>
         <Authors>cime</Authors>
-        <Description>.NET standard implementation of CQRS and EventAggregaor</Description>
+        <Description>.NET standard common</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <Copyright>Copyright 2019 (c) cime. All rights reserved.</Copyright>
         <PackageTags>Core# CQRS Command Query Events EventAggregator</PackageTags>
