--- a/CoreSharp.GraphQL.AspNetCore/CoreSharp.GraphQL.AspNetCore.csproj
+++ b/CoreSharp.GraphQL.AspNetCore/CoreSharp.GraphQL.AspNetCore.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <PackageId>CoreSharp.Cqrs.AspNetCore</PackageId>
+    <PackageId>CoreSharp.GraphQL.AspNetCore</PackageId>
     <PackageVersion>0.1.0</PackageVersion>
     <Authors>cime</Authors>
-    <Description>.NET standard implementation of CQRS and EventAggregator</Description>
+    <Description>GraphQL CQRS integration and extension</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Copyright>Copyright 2019 (c) cime. All rights reserved.</Copyright>
-    <PackageTags>Core# CQRS Command Query Events EventAggregator</PackageTags>
+    <PackageTags>Core# GraphQL CQRS</PackageTags>
     <PackageProjectUrl>https://github.com/cime/CoreSharp</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
@@ -16,12 +16,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
+    <PackageReference Include="SimpleInjector" Version="4.6.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CoreSharp.Cqrs\CoreSharp.Cqrs.csproj" />
-    <ProjectReference Include="..\CoreSharp.NHibernate\CoreSharp.NHibernate.csproj" />
+    <ProjectReference Include="..\CoreSharp.GraphQL\CoreSharp.GraphQL.csproj" />
   </ItemGroup>
 
 </Project>
