feat: removed unused NHIncludingContractResolver and DatabaseConfiguration
feat: C# 8.0 nullable reference types

--- a/CoreSharp.Cqrs/CoreSharp.Cqrs.csproj
+++ b/CoreSharp.Cqrs/CoreSharp.Cqrs.csproj
@@ -12,6 +12,8 @@
     <PackageProjectUrl>https://github.com/cime/CoreSharp</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
+    <LangVersion>8</LangVersion>
+    <NullableContextOptions>enable</NullableContextOptions>
   </PropertyGroup>
 
   <ItemGroup>
