--- a/CoreSharp.Identity/CoreSharp.Identity.csproj
+++ b/CoreSharp.Identity/CoreSharp.Identity.csproj
@@ -2,25 +2,26 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <PackageId>CoreSharp.Cqrs.AspNetCore</PackageId>
+    <PackageId>CoreSharp.Identity</PackageId>
     <PackageVersion>0.1.0</PackageVersion>
     <Authors>cime</Authors>
-    <Description>.NET standard implementation of CQRS and EventAggregator</Description>
+    <Description>GraphQL CQRS integration and extension</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Copyright>Copyright 2019 (c) cime. All rights reserved.</Copyright>
-    <PackageTags>Core# CQRS Command Query Events EventAggregator AspNetCore</PackageTags>
+    <PackageTags>Core# Identity AspNetCore</PackageTags>
     <PackageProjectUrl>https://github.com/cime/CoreSharp</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
+    <LangVersion>8</LangVersion>
+    <NullableContextOptions>enable</NullableContextOptions>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CoreSharp.Cqrs\CoreSharp.Cqrs.csproj" />
     <ProjectReference Include="..\CoreSharp.NHibernate\CoreSharp.NHibernate.csproj" />
   </ItemGroup>
 
