--- a/CoreSharp.DataAccess/CoreSharp.DataAccess.csproj
+++ b/CoreSharp.DataAccess/CoreSharp.DataAccess.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>CoreSharp.DataAccess</PackageId>
-        <PackageVersion>0.1.2</PackageVersion>
+        <PackageVersion>0.1.3</PackageVersion>
         <Authors>cime</Authors>
         <Description>.NET standard implementation of CQRS and EventAggregaor</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -22,6 +22,10 @@
 
     <ItemGroup>
         <ProjectReference Include="..\CoreSharp.Common\CoreSharp.Common.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="CodeList" />
     </ItemGroup>
 
 </Project>
