--- a/CoreSharp.NHibernate.CodeList/CoreSharp.NHibernate.CodeList.csproj
+++ b/CoreSharp.NHibernate.CodeList/CoreSharp.NHibernate.CodeList.csproj
@@ -2,13 +2,13 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <PackageId>CoreSharp.NHibernate.SQLServer</PackageId>
-        <PackageVersion>0.1.2</PackageVersion>
+        <PackageId>CoreSharp.NHibernate.CodeList</PackageId>
+        <PackageVersion>0.1.5</PackageVersion>
         <Authors>cime</Authors>
-        <Description>.NET standard NHibernate SQL Server</Description>
+        <Description>.NET standard NHibernate CodeList</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <Copyright>Copyright 2019 (c) cime. All rights reserved.</Copyright>
-        <PackageTags>Core# nhibernate dataaccess db mssql sqlserver</PackageTags>
+        <PackageTags>Core# nhibernate dataaccess db codelist</PackageTags>
         <PackageProjectUrl>https://github.com/cime/CoreSharp</PackageProjectUrl>
         <PackageLicenseUrl>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
@@ -17,7 +17,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\CoreSharp.NHibernate\CoreSharp.NHibernate.csproj"/>
+      <ProjectReference Include="..\CoreSharp.NHibernate\CoreSharp.NHibernate.csproj" />
     </ItemGroup>
 
 </Project>
