--- a/CoreSharp.NHibernate/CoreSharp.NHibernate.csproj
+++ b/CoreSharp.NHibernate/CoreSharp.NHibernate.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>CoreSharp.NHibernate</PackageId>
-        <PackageVersion>0.1.18</PackageVersion>
+        <PackageVersion>0.1.20</PackageVersion>
         <Authors>cime</Authors>
         <Description>.NET standard NHibernate extensions, convetions</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -19,6 +19,7 @@
     <ItemGroup>
         <PackageReference Include="FluentNHibernate" Version="2.1.2" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.4" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
         <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
         <PackageReference Include="NHibernate" Version="5.2.5" />
         <PackageReference Include="NHibernate.Extensions" Version="2.1.1" />
