--- a/CoreSharp.NHibernate/CoreSharp.NHibernate.csproj
+++ b/CoreSharp.NHibernate/CoreSharp.NHibernate.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>CoreSharp.NHibernate</PackageId>
-        <PackageVersion>0.1.21</PackageVersion>
+        <PackageVersion>0.1.22</PackageVersion>
         <Authors>cime</Authors>
         <Description>.NET standard NHibernate extensions, convetions</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -23,6 +23,7 @@
         <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
         <PackageReference Include="NHibernate" Version="5.2.5" />
         <PackageReference Include="NHibernate.Extensions" Version="2.1.1" />
+        <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
         <PackageReference Include="SimpleInjector" Version="4.6.0" />
         <PackageReference Include="System.Data.SqlClient" Version="4.6.1" />
     </ItemGroup>
