--- a/CoreSharp.Breeze.AspNetCore/CoreSharp.Breeze.AspNetCore.csproj
+++ b/CoreSharp.Breeze.AspNetCore/CoreSharp.Breeze.AspNetCore.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFrameworks>netcoreapp3.0;netstandard2.0</TargetFrameworks>
         <PackageId>CoreSharp.Breeze.AspNetCore</PackageId>
-        <PackageVersion>0.1.8</PackageVersion>
+        <PackageVersion>0.1.10</PackageVersion>
         <Authors>cime</Authors>
         <Description>Breeze integration for Asp.Net Core</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -14,10 +14,14 @@
         <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
     </PropertyGroup>
 
-    <ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
         <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-        <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
     </ItemGroup>
 
     <ItemGroup>
