--- a/CoreSharp.GraphQL/CoreSharp.GraphQL.csproj
+++ b/CoreSharp.GraphQL/CoreSharp.GraphQL.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>CoreSharp.GraphQL</PackageId>
-        <PackageVersion>0.1.11</PackageVersion>
+        <PackageVersion>0.1.26</PackageVersion>
         <Authors>cime</Authors>
         <Description>GraphQL CQRS integration and extension</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -18,6 +18,7 @@
 
     <ItemGroup>
         <PackageReference Include="GraphQL" Version="3.0.0.1293" />
+        <PackageReference Include="System.Linq.Dynamic.Core" Version="1.0.19" />
     </ItemGroup>
 
     <ItemGroup>
