--- a/CoreSharp.GraphQL/CoreSharp.GraphQL.csproj
+++ b/CoreSharp.GraphQL/CoreSharp.GraphQL.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>CoreSharp.GraphQL</PackageId>
-        <PackageVersion>0.1.62</PackageVersion>
+        <PackageVersion>0.1.70</PackageVersion>
         <Authors>cime</Authors>
         <Description>GraphQL CQRS integration and extension</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -17,7 +17,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="GraphQL" Version="3.0.0.1293" />
+        <PackageReference Include="GraphQL" Version="3.0.0-preview-1352" />
         <PackageReference Include="System.Linq.Dynamic.Core" Version="1.0.19" />
     </ItemGroup>
 
