--- a/CoreSharp.Cqrs.AspNetCore/CoreSharp.Cqrs.AspNetCore.csproj
+++ b/CoreSharp.Cqrs.AspNetCore/CoreSharp.Cqrs.AspNetCore.csproj
@@ -1,27 +1,34 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <PackageId>CoreSharp.Cqrs.AspNetCore</PackageId>
-    <PackageVersion>0.1.17</PackageVersion>
-    <Authors>cime</Authors>
-    <Description>.NET standard implementation of CQRS and EventAggregator</Description>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <Copyright>Copyright 2019 (c) cime. All rights reserved.</Copyright>
-    <PackageTags>Core# CQRS Command Query Events EventAggregator AspNetCore</PackageTags>
-    <PackageProjectUrl>https://github.com/cime/CoreSharp</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicenseUrl>
-    <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFrameworks>netcoreapp3.0;netstandard2.0</TargetFrameworks>
+        <PackageId>CoreSharp.Cqrs.AspNetCore</PackageId>
+        <PackageVersion>0.1.18</PackageVersion>
+        <Authors>cime</Authors>
+        <Description>.NET standard implementation of CQRS and EventAggregator</Description>
+        <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+        <Copyright>Copyright 2019 (c) cime. All rights reserved.</Copyright>
+        <PackageTags>Core# CQRS Command Query Events EventAggregator AspNetCore</PackageTags>
+        <PackageProjectUrl>https://github.com/cime/CoreSharp</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.CSharp" Version="4.5.0"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\CoreSharp.Cqrs\CoreSharp.Cqrs.csproj" />
-    <ProjectReference Include="..\CoreSharp.NHibernate\CoreSharp.NHibernate.csproj" />
-  </ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
+        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+        <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\CoreSharp.Cqrs\CoreSharp.Cqrs.csproj"/>
+        <ProjectReference Include="..\CoreSharp.NHibernate\CoreSharp.NHibernate.csproj"/>
+    </ItemGroup>
 
 </Project>
