--- a/CoreSharp.Cqrs.AspNetCore/CoreSharp.Cqrs.AspNetCore.csproj
+++ b/CoreSharp.Cqrs.AspNetCore/CoreSharp.Cqrs.AspNetCore.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.0;netstandard2.0</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.1;netcoreapp3.0;netstandard2.0</TargetFrameworks>
         <PackageId>CoreSharp.Cqrs.AspNetCore</PackageId>
-        <PackageVersion>0.1.18</PackageVersion>
+        <PackageVersion>0.1.19</PackageVersion>
         <Authors>cime</Authors>
         <Description>.NET standard implementation of CQRS and EventAggregator</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -16,6 +16,10 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.CSharp" Version="4.5.0"/>
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
