--- a/CoreSharp.Identity/CoreSharp.Identity.csproj
+++ b/CoreSharp.Identity/CoreSharp.Identity.csproj
@@ -1,32 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.0;netstandard2.0</TargetFrameworks>
-    <PackageId>CoreSharp.Identity</PackageId>
-    <PackageVersion>0.1.13</PackageVersion>
-    <Authors>cime</Authors>
-    <Description>GraphQL CQRS integration and extension</Description>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <Copyright>Copyright 2019 (c) cime. All rights reserved.</Copyright>
-    <PackageTags>Core# Identity AspNetCore</PackageTags>
-    <PackageProjectUrl>https://github.com/cime/CoreSharp</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicenseUrl>
-    <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
-    <LangVersion>8</LangVersion>
-    <NullableContextOptions>enable</NullableContextOptions>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFrameworks>netcoreapp3.1;netcoreapp3.0;netstandard2.0</TargetFrameworks>
+        <PackageId>CoreSharp.Identity</PackageId>
+        <PackageVersion>0.1.14</PackageVersion>
+        <Authors>cime</Authors>
+        <Description>GraphQL CQRS integration and extension</Description>
+        <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+        <Copyright>Copyright 2019 (c) cime. All rights reserved.</Copyright>
+        <PackageTags>Core# Identity AspNetCore</PackageTags>
+        <PackageProjectUrl>https://github.com/cime/CoreSharp</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
+        <LangVersion>8</LangVersion>
+        <NullableContextOptions>enable</NullableContextOptions>
+    </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.0.0" />
-  </ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
+        <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.0"/>
+    </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="2.2.0" />
-  </ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
+        <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.0.0"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\CoreSharp.NHibernate\CoreSharp.NHibernate.csproj" />
-  </ItemGroup>
+    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+        <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0"/>
+        <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="2.2.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\CoreSharp.NHibernate\CoreSharp.NHibernate.csproj"/>
+    </ItemGroup>
 
 </Project>
