--- a/CoreSharp.GraphQL.AspNetCore/CoreSharp.GraphQL.AspNetCore.csproj
+++ b/CoreSharp.GraphQL.AspNetCore/CoreSharp.GraphQL.AspNetCore.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFrameworks>netcoreapp3.1;netcoreapp3.0;netstandard2.0</TargetFrameworks>
         <PackageId>CoreSharp.GraphQL.AspNetCore</PackageId>
-        <PackageVersion>0.1.21</PackageVersion>
+        <PackageVersion>0.1.90</PackageVersion>
         <Authors>cime</Authors>
         <Description>GraphQL CQRS integration and extension</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -15,19 +15,21 @@
     </PropertyGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
-        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
-        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-        <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0"/>
+        <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\CoreSharp.GraphQL\CoreSharp.GraphQL.csproj"/>
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+        <PackageReference Include="GraphQL.NewtonsoftJson" Version="3.0.0-preview-1490" />
+        <ProjectReference Include="..\CoreSharp.GraphQL\CoreSharp.GraphQL.csproj" />
     </ItemGroup>
 
 </Project>
