--- a/CoreSharp.GraphQL/CoreSharp.GraphQL.csproj
+++ b/CoreSharp.GraphQL/CoreSharp.GraphQL.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>CoreSharp.GraphQL</PackageId>
-        <PackageVersion>0.1.97</PackageVersion>
+        <PackageVersion>0.1.300</PackageVersion>
         <Authors>cime</Authors>
         <Description>GraphQL CQRS integration and extension</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -17,7 +17,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="GraphQL" Version="3.0.0-preview-1490" />
+        <PackageReference Include="GraphQL" Version="3.0.0-preview-1648" />
+        <PackageReference Include="GraphQL-Parser" Version="5.1.2" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
         <PackageReference Include="System.Linq.Dynamic.Core" Version="1.0.19" />
     </ItemGroup>
