--- a/Analyzers/CoreSharp.Analyzer.NHibernate/CoreSharp.Analyzer.NHibernate.csproj
+++ b/Analyzers/CoreSharp.Analyzer.NHibernate/CoreSharp.Analyzer.NHibernate.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>CoreSharp.Analyzer.NHibernate</PackageId>
-    <PackageVersion>0.1.9</PackageVersion>
+    <PackageVersion>0.1.10</PackageVersion>
     <Authors>cime</Authors>
     <Description>Roslyn Analyzer for CoreSharp.NHibernate</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.2.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.2.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="3.2.1" />
+    <PackageReference Include="Humanizer.Core" Version="2.8.26" />
   </ItemGroup>
 
   <ItemGroup>
