--- a/CoreSharp.Breeze/CoreSharp.Breeze.csproj
+++ b/CoreSharp.Breeze/CoreSharp.Breeze.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>CoreSharp.Breeze</PackageId>
-        <PackageVersion>0.1.48</PackageVersion>
+        <PackageVersion>0.1.52</PackageVersion>
         <Authors>cime</Authors>
         <Description>Breeze ContextProvider for netstandard</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -15,9 +15,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Humanizer.Core" Version="2.8.26" />
         <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-        <PackageReference Include="PluralizeService.Core" Version="1.0.0.5" />
         <PackageReference Include="System.Linq.Queryable" Version="4.3.0" />
         <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
         <PackageReference Include="NHibernate" Version="5.2.6" />
