--- a/Analyzers/CoreSharp.Analyzer.NHibernate/CoreSharp.Analyzer.NHibernate.csproj
+++ b/Analyzers/CoreSharp.Analyzer.NHibernate/CoreSharp.Analyzer.NHibernate.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>CoreSharp.Analyzer.NHibernate</PackageId>
-    <PackageVersion>0.1.12</PackageVersion>
+    <PackageVersion>0.1.15</PackageVersion>
     <Authors>cime</Authors>
     <Description>Roslyn Analyzer for CoreSharp.NHibernate</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -33,6 +33,9 @@
       <Pack>true</Pack>
       <PackagePath>analyzers\dotnet\cs\</PackagePath>
     </Content>
+    <None Update="Humanizer.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
