--- a/CoreSharp.NHibernate.Generator/CoreSharp.NHibernate.Generator.csproj
+++ b/CoreSharp.NHibernate.Generator/CoreSharp.NHibernate.Generator.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Humanizer.Core" Version="2.8.26" />
       <PackageReference Include="Microsoft.Build.Locator" Version="1.2.6" />
       <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.9.4" />
       <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="3.2.1" />
@@ -14,7 +15,6 @@
       <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.2.1" />
       <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="3.2.1" />
       <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.2.1" />
-      <PackageReference Include="PluralizeService.Core" Version="1.0.0.5" />
       <PackageReference Include="SimpleInjector" Version="4.7.1" />
     </ItemGroup>
 
