--- a/CoreSharp.GraphQL/CoreSharp.GraphQL.csproj
+++ b/CoreSharp.GraphQL/CoreSharp.GraphQL.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>CoreSharp.GraphQL</PackageId>
-        <PackageVersion>0.1.300</PackageVersion>
+        <PackageVersion>0.1.303</PackageVersion>
         <Authors>cime</Authors>
         <Description>GraphQL CQRS integration and extension</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -13,7 +13,7 @@
         <PackageLicenseUrl>https://github.com/cime/CoreSharp/blob/master/LICENSE</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/cime/CoreSharp</RepositoryUrl>
         <LangVersion>8</LangVersion>
-        <NullableContextOptions>enable</NullableContextOptions>
+        <NullaableContextOptions>enable</NullaableContextOptions>
     </PropertyGroup>
 
     <ItemGroup>
