--- a/CoreSharp.GraphQL.AspNetCore/CoreSharp.GraphQL.AspNetCore.csproj
+++ b/CoreSharp.GraphQL.AspNetCore/CoreSharp.GraphQL.AspNetCore.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFrameworks>netcoreapp3.1;netcoreapp3.0;netstandard2.0</TargetFrameworks>
         <PackageId>CoreSharp.GraphQL.AspNetCore</PackageId>
-        <PackageVersion>0.1.302</PackageVersion>
+        <PackageVersion>0.1.310</PackageVersion>
         <Authors>cime</Authors>
         <Description>GraphQL CQRS integration and extension</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -28,7 +28,7 @@
 
     <ItemGroup>
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-        <PackageReference Include="GraphQL.NewtonsoftJson" Version="3.0.0-preview-1648" />
+        <PackageReference Include="GraphQL.NewtonsoftJson" Version="3.1.0" />
         <ProjectReference Include="..\CoreSharp.GraphQL\CoreSharp.GraphQL.csproj" />
     </ItemGroup>
 
