--- a/CoreSharp.Breeze.AspNetCore/CoreSharp.Breeze.AspNetCore.csproj
+++ b/CoreSharp.Breeze.AspNetCore/CoreSharp.Breeze.AspNetCore.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.1;netcoreapp3.0;netstandard2.0</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.1;</TargetFrameworks>
         <PackageId>CoreSharp.Breeze.AspNetCore</PackageId>
-        <PackageVersion>0.1.11</PackageVersion>
+        <PackageVersion>0.2.0</PackageVersion>
         <Authors>cime</Authors>
         <Description>Breeze integration for Asp.Net Core</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -16,12 +16,10 @@
 
     <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
@@ -31,6 +29,10 @@
 
     <ItemGroup>
         <ProjectReference Include="..\CoreSharp.Breeze\CoreSharp.Breeze.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.9" />
     </ItemGroup>
 
 </Project>
