--- a/CoreSharp.NHibernate.SQLServer/CoreSharp.NHibernate.SQLServer.csproj
+++ b/CoreSharp.NHibernate.SQLServer/CoreSharp.NHibernate.SQLServer.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <PackageId>CoreSharp.NHibernate.SQLServer</PackageId>
-        <PackageVersion>0.1.46</PackageVersion>
+        <PackageVersion>0.2.0</PackageVersion>
         <Authors>cime</Authors>
         <Description>.NET standard NHibernate SQL Server</Description>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -18,6 +18,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\CoreSharp.NHibernate\CoreSharp.NHibernate.csproj" />
+        <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
     </ItemGroup>
 
 </Project>
