Grpc date format fix.

--- a/CoreSharp.Cqrs.Tests/CoreSharp.Cqrs.Tests.csproj
+++ b/CoreSharp.Cqrs.Tests/CoreSharp.Cqrs.Tests.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\CoreSharp.Cqrs.Grpc.Client\CoreSharp.Cqrs.Grpc.Client.csproj" />
       <ProjectReference Include="..\CoreSharp.Cqrs\CoreSharp.Cqrs.csproj" />
     </ItemGroup>
 
