--- a/CoreSharp.Cqrs.Grpc.AspNetCore/CoreSharp.Cqrs.Grpc.AspNetCore.csproj
+++ b/CoreSharp.Cqrs.Grpc.AspNetCore/CoreSharp.Cqrs.Grpc.AspNetCore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CoreSharp.Cqrs.Grpc.Processors\CoreSharp.Cqrs.Grpc.Processors.csproj" />
+    <ProjectReference Include="..\CoreSharp.Identity.Extensions\CoreSharp.Identity.Extensions.csproj" />
   </ItemGroup>
 
 </Project>
