--- a/CoreSharp.Common.Abstractions/CoreSharp.Common.Abstractions.csproj
+++ b/CoreSharp.Common.Abstractions/CoreSharp.Common.Abstractions.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>8</LangVersion>
+    <RootNamespace>CoreSharp.Common</RootNamespace>
   </PropertyGroup>
 
 </Project>
